--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://JRJurman.github.io/wise-site
 title: West Irondequoit Supports Education
-subtitle: Gathering people, ideas and momentum to support West Irondequoit students, schools, and programs. 
+subtitle: Gathering people, ideas and momentum to support West Irondequoit programs. 
 author: Jesse Jurman and Friends
 simple_search: https://www.google.com/search
 description: WISE (West Irondequoit Supports Education) is a forum for gathering people, ideas and momentum with the purpose of supporting West Irondequoit students, schools, and programs during the contingency budget.
